# askap-benchmarks

gpuPacer2022/: README.md
gpuPacer2022/codes/CUDA/degridding/version1/: main.cpp
gpuPacer2022/codes/CUDA/gridding/version1/: main.cpp
gpuPacer2022/codes/HIP/degridding/version1/: main.cpp
gpuPacer2022/codes/HIP/degridding/version3/: main.cpp
gpuPacer2022/codes/HIP/gridding/version1/: main.cpp
gpuPacer2022/codes/clean/: CMakeLists.txt  main.cpp
gpuPacer2022/codes/clean/GPU/: CMakeLists.txt
gpuPacer2022/codes/clean/GPU/utilities/: Parameters.h
gpuPacer2022/codes/degridding/: CMakeLists.txt
gpuPacer2022/codes/degridding/HIP/: CMakeLists.txt
gpuPacer2022/codes/degridding/utilities/: MaxError.cpp
gpuPacer2023/: README.md
gpuPacer2023/Codes/clean/: CMakeLists.txt  Parameters.h  main.cpp
gpuPacer2023/Codes/clean/solvers/factory/: SolverFactory.h
gpuPacer2023/Codes/clean/solvers/include/: GPUOlder.h  GPUPS.h  GPUPSFullUnroll.h  GPUPSLastWUnrolled.h  GPUSimpler.h  Golden.h  GoldenSimpler.h  GpuOlder.h  GpuPS.h  GpuPSFullUnroll.h  GpuPSLastWUnrolled.h  GpuSimpler.h  GpuThrust.h  OpenMP.h  (+2 more)
gpuPacer2023/Codes/clean/solvers/src/: CMakeLists.txt  GPUOlder.cu  GPUPS.cu  GPUPSLastWUnrolled.cu  GPUSimpler.hip  Golden.cpp  GoldenSimpler.cpp  GpuOlder.hip  GpuPS.hip  GpuPSFullUnroll.hip  GpuPSLastWUnrolled.hip  GpuSimpler-hip-amdgcn-amd-amdhsa-gfx90a.bc  GpuSimpler-hip-amdgcn-amd-amdhsa-gfx90a.cui  GpuSimpler-hip-amdgcn-amd-amdhsa-gfx90a.out  GpuSimpler-hip-amdgcn-amd-amdhsa-gfx90a.s  GpuSimpler-host-x86_64-unknown-linux-gnu.bc  GpuSimpler-host-x86_64-unknown-linux-gnu.cui  GpuSimpler-host-x86_64-unknown-linux-gnu.s  GpuSimpler.hip  GpuSimpler.hip-hip-amdgcn-amd-amdhsa.hipfb  GpuThrust.cpp  GpuThrust.hip  OpenMP.cpp  OpenMPNew.cpp  OpenMPOld.cpp
gpuPacer2023/Codes/degridding/: CMakeLists.txt  Parameters.h  main.cpp
gpuPacer2023/Codes/gridding/: CMakeLists.txt  main.cpp
gpuPacer2023/ExploreSetonix/: README.md
gpuPacer2023/ExploreSetonix/Codes/CLEAN/: CMakeLists.txt  main.cpp
gpuPacer2023/ExploreSetonix/Codes/CLEAN/utilities/: Hello.cpp  LoggerUtil.h  ThreadAffinityUtil.cpp
gpuPacer2023/ExploreSetonix/Codes/HelloWorldClass/: CMakeLists.txt  helloConfig.h.in  main.cpp
gpuPacer2023/ExploreSetonix/Codes/PreliminaryOLCF/: CMakeLists.txt  main.cpp
gpuPacer2023/clean/solvers/factory/: SolverFactory.h
gpuPacer2023/clean/solvers/src/: GPUOlder.cu  GPUPS.cu  GPUPSFullUnroll.cu
gpuPacer2023/clean/utilities/include/: LoggerUtil.h  WarmupGPU.h
gpuPacer2023/clean/utilities/src/: ImageProcess.cpp  MaxError.cpp  ThreadAffinityUtil.cpp
gpuPacer2023/degridding/: main.cpp
gpuPacer2023/degridding/solvers/include/: DegridderCPU.h  DegridderGPUInterleaved.h  DegridderGPUSequential.h  DegridderGPUTiled.h
gpuPacer2023/degridding/solvers/interface/: IDegridder.h
gpuPacer2023/degridding/solvers/src/: DegridderGPUInterleaved.cu  DegridderGPUSequential.cu  DegridderGPUTiled.cu
gpuPacer2023/degridding/utilities/include/: LoggerUtil.h  Setup.h
gpuPacer2023/degridding/utilities/src/: Hello.cpp  MemUtil.cpp  Setup.cpp  WarmupGPU.cu
gpuPacer2023/gridding/: CMakeLists.txt  Parameters.h  main.cpp
gpuPacer2023/gridding/solvers/factory/: SolverFactory.h
gpuPacer2023/gridding/solvers/src/: GridderCPU.cpp  GridderGPUAtomic.cu
gpuPacer2023/gridding/utilities/: MaxError.cpp
gpuPacer2023/gridding/utilities/include/: MaxError.h  Setup.h
gpuPacer2023/gridding/utilities/src/: CMakeLists.txt  PrintVector.cpp  TimeUtil.cpp
(+70 files in other folders)
